--- a/Doctor_Local/Base.lproj/Main.storyboard
+++ b/Doctor_Local/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Unknown constraint types" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -102,6 +103,7 @@
                                         </state>
                                         <connections>
                                             <action selector="loginBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="B57-pj-nGx"/>
+                                            <segue destination="daL-ZN-Nax" kind="show" identifier="login" id="aTl-8Z-l0X"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -142,7 +144,6 @@
                     <connections>
                         <outlet property="accountText" destination="ruY-ot-c2K" id="bSO-3g-Cv3"/>
                         <outlet property="passwordText" destination="tcq-Fi-n6H" id="eYp-ts-xFE"/>
-                        <segue destination="ShY-xy-Npa" kind="show" identifier="login" id="3MM-08-4aY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -150,135 +151,58 @@
             <point key="canvasLocation" x="843.1640625" y="123.4375"/>
         </scene>
         <!--Home View Controller-->
-        <scene sceneID="F9B-tY-j46">
+        <scene sceneID="bEh-2v-ayS">
             <objects>
-                <viewController id="ShY-xy-Npa" customClass="HomeViewController" customModule="Doctor_Local" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="daL-ZN-Nax" customClass="HomeViewController" customModule="Doctor_Local" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="O7b-el-rXP"/>
-                        <viewControllerLayoutGuide type="bottom" id="bY5-M3-0dr"/>
+                        <viewControllerLayoutGuide type="top" id="VNe-qW-Gar"/>
+                        <viewControllerLayoutGuide type="bottom" id="GrS-gv-R7h"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Gne-6d-mn8">
+                    <view key="view" contentMode="scaleToFill" id="0wq-1d-vH9">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TRG-mW-2yL">
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="asu-n7-Ay9">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="wSo-3m-feU"/>
+                                    <constraint firstAttribute="width" constant="200" id="e3P-8n-5QC"/>
                                 </constraints>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="typeCell" rowHeight="50" id="rZ2-xn-ia3" customClass="HomeTableViewCell" customModule="Doctor_Local" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="200" height="50"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rZ2-xn-ia3" id="8Or-hd-8oG">
-                                            <frame key="frameInset" width="200" height="49"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vmt-qU-oSA">
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="Vmt-qU-oSA" firstAttribute="top" secondItem="8Or-hd-8oG" secondAttribute="top" id="Awt-cH-yPH"/>
-                                                <constraint firstAttribute="trailing" secondItem="Vmt-qU-oSA" secondAttribute="trailing" id="YgM-Ab-5Ct"/>
-                                                <constraint firstItem="Vmt-qU-oSA" firstAttribute="leading" secondItem="8Or-hd-8oG" secondAttribute="leading" id="Yy2-Ee-94a"/>
-                                                <constraint firstAttribute="bottom" secondItem="Vmt-qU-oSA" secondAttribute="bottom" id="y6Z-LV-3Kq"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="typeName" destination="Vmt-qU-oSA" id="0Gg-Um-KWr"/>
-                                            <segue destination="y8d-IO-Yvy" kind="showDetail" identifier="showOne" id="MiN-Lu-N7q"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="Gne-6d-mn8" id="dpy-CJ-R9v"/>
-                                    <outlet property="delegate" destination="Gne-6d-mn8" id="wZO-PY-VQv"/>
-                                </connections>
-                            </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cb9-HF-ppA">
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fp0-l4-2TB">
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="70" id="3bv-Z4-Ps1"/>
-                                            <constraint firstAttribute="height" constant="70" id="XYb-uy-UdW"/>
-                                        </constraints>
-                                    </imageView>
-                                    <searchBar contentMode="redraw" fixedFrame="YES" text="姓名查询" translatesAutoresizingMaskIntoConstraints="NO" id="v75-pU-HX0">
-                                        <frame key="frameInset" minX="95" minY="30" height="44" maxX="54"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                        <scopeButtonTitles>
-                                            <string>Title</string>
-                                            <string>Title</string>
-                                        </scopeButtonTitles>
-                                    </searchBar>
-                                    <searchBar contentMode="redraw" fixedFrame="YES" text="身份证查询" translatesAutoresizingMaskIntoConstraints="NO" id="MkQ-zN-xy4">
-                                        <frame key="frameInset" minX="371" minY="30" height="44" maxX="-222"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                        <scopeButtonTitles>
-                                            <string>Title</string>
-                                            <string>Title</string>
-                                        </scopeButtonTitles>
-                                    </searchBar>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="身份证号:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vEW-Td-oJC">
-                                        <frame key="frameInset" minX="269" minY="42" width="74" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </scrollView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zwp-1a-vxH">
+                                <color key="backgroundColor" red="1" green="0.221965263" blue="0.24930000839999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="fp0-l4-2TB" firstAttribute="centerY" secondItem="Cb9-HF-ppA" secondAttribute="centerY" id="UYb-XR-rm6"/>
-                                    <constraint firstAttribute="height" constant="130" id="psN-Ql-gUw"/>
-                                    <constraint firstItem="fp0-l4-2TB" firstAttribute="leading" secondItem="Cb9-HF-ppA" secondAttribute="leading" constant="10" id="yXm-SN-i8q"/>
+                                    <constraint firstAttribute="height" constant="200" id="Uj2-dh-C2f"/>
                                 </constraints>
                             </view>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="28F-wH-FN3">
-                                <frame key="frameInset" minX="360" minY="202" height="45" maxX="15"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
+                            <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AhW-yJ-GWe">
+                                <color key="backgroundColor" red="0.12941176469999999" green="0.60392156860000001" blue="0.3803921569" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="AhW-yJ-GWe" secondAttribute="trailing" id="QjO-Ww-qUg"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Cb9-HF-ppA" firstAttribute="top" secondItem="O7b-el-rXP" secondAttribute="bottom" id="FIO-PT-esW"/>
-                            <constraint firstItem="Cb9-HF-ppA" firstAttribute="leading" secondItem="TRG-mW-2yL" secondAttribute="trailing" constant="10" id="Gkv-GX-QxG"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Cb9-HF-ppA" secondAttribute="trailing" id="WhP-Oo-7DC"/>
-                            <constraint firstItem="bY5-M3-0dr" firstAttribute="top" secondItem="TRG-mW-2yL" secondAttribute="bottom" id="gpf-vE-eY9"/>
-                            <constraint firstItem="TRG-mW-2yL" firstAttribute="top" secondItem="O7b-el-rXP" secondAttribute="bottom" id="pVQ-I5-xk8"/>
-                            <constraint firstItem="TRG-mW-2yL" firstAttribute="leading" secondItem="Gne-6d-mn8" secondAttribute="leading" id="zmz-8x-40U"/>
+                            <constraint firstItem="AhW-yJ-GWe" firstAttribute="top" secondItem="zwp-1a-vxH" secondAttribute="bottom" id="5rs-2f-bgB"/>
+                            <constraint firstItem="zwp-1a-vxH" firstAttribute="top" secondItem="VNe-qW-Gar" secondAttribute="bottom" id="7WI-kl-hEV"/>
+                            <constraint firstItem="AhW-yJ-GWe" firstAttribute="leading" secondItem="asu-n7-Ay9" secondAttribute="trailing" id="8ER-Ev-rjm"/>
+                            <constraint firstItem="GrS-gv-R7h" firstAttribute="top" secondItem="AhW-yJ-GWe" secondAttribute="bottom" id="9Bu-Aj-gEE"/>
+                            <constraint firstAttribute="trailing" secondItem="AhW-yJ-GWe" secondAttribute="trailing" id="Qbu-ql-gZR"/>
+                            <constraint firstItem="asu-n7-Ay9" firstAttribute="leading" secondItem="0wq-1d-vH9" secondAttribute="leading" id="ebP-HY-vAZ"/>
+                            <constraint firstItem="zwp-1a-vxH" firstAttribute="leading" secondItem="asu-n7-Ay9" secondAttribute="trailing" id="fEo-hA-sCf"/>
+                            <constraint firstItem="asu-n7-Ay9" firstAttribute="top" secondItem="VNe-qW-Gar" secondAttribute="bottom" id="i5Y-UW-Boo"/>
+                            <constraint firstItem="GrS-gv-R7h" firstAttribute="top" secondItem="asu-n7-Ay9" secondAttribute="bottom" id="rL3-ad-ZfU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="zwp-1a-vxH" secondAttribute="trailing" id="uO4-ue-nIC"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="tableView" destination="TRG-mW-2yL" id="Gam-7a-4Nq"/>
+                        <outlet property="dataView" destination="AhW-yJ-GWe" id="2DD-9M-toS"/>
+                        <outlet property="headerView" destination="zwp-1a-vxH" id="c5m-Yi-SP6"/>
+                        <outlet property="scrollView" destination="asu-n7-Ay9" id="0gl-wj-UNb"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="oMR-Au-2sC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="93d-y6-ziq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1545.1171875" y="122.65625"/>
-        </scene>
-        <!--Index One View Controller-->
-        <scene sceneID="RHW-3D-vap">
-            <objects>
-                <viewController id="y8d-IO-Yvy" customClass="IndexOneViewController" customModule="Doctor_Local" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="0D9-hA-QIT"/>
-                        <viewControllerLayoutGuide type="bottom" id="0fC-DU-dEf"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="5LD-To-O1Q">
-                        <rect key="frame" x="0.0" y="0.0" width="703" height="768"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.221965263" blue="0.24930000839999999" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ALc-PH-VsZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2227" y="123"/>
+            <point key="canvasLocation" x="1539.84375" y="121.875"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="4bQ-3a-rQh">
